<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perception_server</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lucyannofrota@gmail.com">Lucyanno</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>

  <depend>boost</depend>

  <depend>smap_interfaces</depend>
  <depend>smap_base</depend>
  <depend>thing</depend>
  <depend>map_exporter</depend>
  <depend>topo_map</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cppcheck</test_depend>
  <test_depend>ament_uncrustify</test_depend>
  <test_depend>ament_lint_cmake</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>ament_flake8</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
