<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>smap_base</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lucyannofrota@gmail.com">Lucyanno</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend> -->


  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  
  <depend>smap_interfaces</depend>

  <depend>boost</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>

  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cppcheck</test_depend>
  <test_depend>ament_uncrustify</test_depend>
  <test_depend>ament_lint_cmake</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>ament_flake8</test_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
